navbar overflow fix

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -27,8 +27,8 @@
   display: flex;
   position: sticky;
   top: 0;
-  width: 100vw;
-  padding: 0 3%;
+  // width: 100vw;
+  padding: 0 2%;
   justify-content: space-between;
   align-items: center;
   color: var(--color-text-primary);
